--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 Repository for data structures and algorithms implemented in Python.
 
-Implemented to further develop personal skills. 
+Implementing to solidify knowledge of DS&A.
